--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <script src="jquery.nicescroll.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="main.js"></script>
     <title>Проведение интервью</title>
   </head>
   <body>
-    <script src="main.js"></script>
     <section class="part part-one">
       <div class = "fixed-container">
         <div class ="circle-container">
@@ -74,7 +74,7 @@
             </div>
           </div>
           <ul class = "part-two-questions-list">
-            <li class = "questions">Расскажите, пожалуйста, о Вашем образовании</li>
+            <li class = "questions">Расскажите, пожалуйста, о Вашем образовании.</li>
             <li class = "questions">(Если еще учится) Сможете ли Вы совмещать учебу и работу?</li>
           </ul>
           <div class = "answers-wrapper">
